force-app/main/default/objects/Package_Type__mdt/Package_Type__mdt.object-meta.xml
<CustomObject>
    <description>Object to store different package types and their codes</description>
    <label>Package Type</label>
    <pluralLabel>Package Types</pluralLabel>
</CustomObject>