force-app/main/default/objects/Package_Type__mdt/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <label>Package Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>