force-app/main/default/objects/Package_Type__mdt/fields/Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Package_Description__c</fullName>
    <label>Package Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>