force-app/main/default/objects/Package_Type__mdt/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bulk</fullName>
                <default>true</default>
                <label>Bulk</label>
            </value>
            <value>
                <fullName>Non-Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>